src/css/Projects.css
/*Fonts styles*/
.fontTitleNormalProjects {
    font-family: 'Space Mono';
    font-weight: 400;
    color: white;
    font-size: 20px;
}

.fontTitleBoldProjects {
    font-family: 'Space Mono';
    font-weight: 700;
    color: white;
    font-size: 20px;
}

.fontTitleExtraBoldProjects {
    font-family: 'Space Mono';
    font-weight: 700;
    color: white;
    font-size: 20px;
}

.fontBodyNormalProjects {
    font-family: 'Space Mono';
    font-weight: 400;
    color: white;
    font-size: 20px;
}

.fontBodyBoldProjects {
    font-family: 'Space Mono';
    font-weight: 700;
    color: white;
    font-size: 20px;
}

.fontBodyExtraBoldProjects {
    font-family: 'Space Mono';
    font-weight: 700;
    color: white;
    font-size: 20px;
}

/*Screen styles*/
.projects {
    display: flex;
    background-clip: padding-box;
    border: 1px solid rgba(2, 2, 13, 1);
    flex-direction: column;
}

.projects-content-pro {
    padding-top: 69px;
}

.projects-content-perso {
    padding-top: 69px;
    padding-bottom: 20px;
}

.projects-title {
    z-index: 0;
    margin: 60px 6% 40px 6%;
    color: white;
    font-family: "Space Mono";
    font-weight: 700;
    font-size: 40px;
    display: flex;
    align-items: flex-start;
    flex-direction: column;
}

.projects-title p {
    font-family: 'Space Mono';
    font-weight: 400;
    color: white;
    font-size: 20px;
    margin: 0;
}

.container-caroussel {
    display: flex;
    background-clip: padding-box;
    border: 1px solid rgba(2, 2, 13, 1);
    min-height: 500px;
    width: 100vw;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.container-arrow-icon {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 5px 0 5px;
}

.arrow-icon-hover {
    height: 55px;
    width: 55px;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
    background-color: transparent;
    transition: background-color 0.3s ease;
    z-index: 1;
    cursor: pointer;
}

.arrow-icon-hover:hover {
    background-color: rgba(71, 205, 214, 0.3)
}

.arrow-icon-hover-mobile {
    height: 55px;
    width: 55px;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
    background-color: rgba(71, 205, 214, 0.3);
    z-index: 1;
}

.arrow-icon {
    height: 35px;
    width: 35px;
    color: white;
}

.container-slides {
    width: 50%;
    z-index: 0;
}

.slide {
    position: relative;
    display: flex;
    height: 450px;
    width: 500px;
    border-radius: 10px;
    overflow: hidden;
}

.slide img {
    position: absolute;
    height: 100%;
    width: 100%;
    border-radius: 10px;
}

.content-slide {
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    height: 100%;
    width: 100%;
    background-color: rgba(29, 29, 29, 0.5);
    border-radius: 10px;
    opacity: 0;
    transition: opacity 0.3s;
    cursor: pointer;
    flex-direction: column;
}

.content-slide:hover {
    opacity: 1;
}

.content-slide h2 {
    font-family: "Space Mono";
    font-weight: 700;
    font-size: 23px;
    color: white;
    margin: 30px 15px 15px 15px;
}

.content-slide p {
    font-family: "Space Mono";
    font-weight: 400;
    font-size: 20px;
    color: white;
    margin: 15px 15px 30px 15px;
    overflow: hidden;
}

.content-slide-mobile {
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    height: 100%;
    width: 100%;
    background-color: rgba(29, 29, 29, 0.5);
    border-radius: 10px;
    opacity: 1;
    cursor: pointer;
    flex-direction: column;
}

.content-slide-mobile h2 {
    font-family: "Space Mono";
    font-weight: 700;
    font-size: 23px;
    color: white;
    margin: 30px 15px 15px 15px;
}

.content-slide-mobile p {
    font-family: "Space Mono";
    font-weight: 400;
    font-size: 20px;
    color: white;
    margin: 15px 15px 30px 15px;
    overflow: hidden;
}

.overlay-animated-item-project {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    background-color: rgba(2, 2, 13, 0.5);
    z-index: 999;
}

.image-hover-container {
    position: fixed;
    height: 100vh;
    width: 100vw;
    display: flex;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 999;
    justify-content: center;
    align-items: center;
}

/* Container */
.image-hover-container .container {
    position: absolute;
    min-height: 250px;
    height: 60%;
    width: 20%;
    margin: auto;
    display: flex;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* Middle */
.image-hover-container .container .middle {
    position: absolute;
    z-index: 1000;
    margin: auto;
    height: 100%;
    width: 100%;
    background-color: rgba(26, 26, 26, 0.6);
    border-radius: 10px;
    background-size: cover;
    background-position: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

/* Positions for bottom and top elements */
.image-hover-container .container .top-left {
    position: absolute;
    z-index: 1000;
    height: 50%;
    width: 100%;
    box-shadow: -5px 5px 5px rgba(71, 205, 214, 0.3);
    background-color: rgba(26, 26, 26, 1);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
}

.image-hover-container .container .bottom-left {
    position: absolute;
    z-index: 1000;
    height: 50%;
    width: 100%;
    box-shadow: -5px 5px 5px rgba(71, 205, 214, 0.3);
    background-color: rgba(26, 26, 26, 1);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
}
/* ... */

